--- a/Ck.Server.Infra.IoC/Ck.Server.Infra.IoC.csproj
+++ b/Ck.Server.Infra.IoC/Ck.Server.Infra.IoC.csproj
@@ -1,5 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ck.Server.Domain\Ck.Server.Domain.csproj" />
+    <ProjectReference Include="..\Ck.Server.Infra.Data\Ck.Server.Infra.Data.csproj" />
+    <ProjectReference Include="..\Ck.Server.Application\Ck.Server.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
