--- a/Ck.Server.Infra.IoC/Ck.Server.Infra.IoC.csproj
+++ b/Ck.Server.Infra.IoC/Ck.Server.Infra.IoC.csproj
@@ -6,6 +6,11 @@
     <ProjectReference Include="..\Ck.Server.Application\Ck.Server.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
